<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!-- Device Control strings -->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- Main Activity -->
    <string name="scan_activity_button">Scan your smart watch and start the course ! </string>
    <string name="direct_course_button">Start a course without scanning, with the saved devices ! </string>
    <string name="offline_course_button">Start manual timing in offline mode </string>

    <!-- Offline Activity -->
    <string name="start_course_button">Start timer for everyone</string>
    <string name="input_runner">Runner\'s name</string>
    <string name="race">Race</string>
    <string name="send_results_button">Send the results</string>
    <string name="missing_name">One or more runner\'s name are missing</string>

    <!-- SendResults Activity -->
    <string name="send_mode">Send Mode</string>
    <string name="by_mail">Send by mail in a csv file</string>
    <string name="by_bluetooth">Send by bluetooth to your computer</string>
    <string name="email_to_send">Email to send</string>
    <string name="send_button">Send</string>
    <string name="search_computer">Searching for computer</string>
    <string name="computer_name">Computer\'s name</string>
    <string name="incorrect_address">the mail address is incorrect</string>
    <string name="email_subject">my VMA tests</string>

    <!-- DeviceCheck Activity -->
    <string name="runner_name">Runner\'s name</string>
    <string name="add_device">Add this device</string>
    <string name="back_to_scan">Don\'t add this device</string>
    <string name="update_runner">Change the runner\'s name</string>

    <!-- ShowDevice Activity -->
    <string name="address">Address</string>
    <string name="saved_devices">Check the saved devices that you want to run with</string>
    <string name="start_race">Start the race</string>
</resources>
