<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bluetoothlegatt.SendResultsActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/recap_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/lightGrey"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recap_layout" />

        <LinearLayout
            android:id="@+id/bluetooth_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_linear_layout">

            <Button
                android:id="@+id/searching_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_computer"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Button
                android:id="@+id/send_computer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_button"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_to_send"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/send_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="send_by_mail"
                android:text="@string/send_button"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>



</android.support.constraint.ConstraintLayout>

</ScrollView>

